# a2hackathon2019

./: README.md
api/: Dockerfile  Vagrantfile  dev.Dockerfile  requirements.txt  runserver.py  setup.cfg
api/Culinary_Coin.egg-info/: PKG-INFO  SOURCES.txt  pbr.json  requires.txt
api/cca/: __init__.py
api/cca/config/: __init__.py
api/cca/lib/helpers/: __init__.py  timestamp.py
api/cca/routes/: __init__.py
api/cca/routes/v1/: __init__.py  balance.py  health.py  transaction.py
api/cca/templates/: __init__.py
api/cca/templates/responses/core/: base.j2
api/cca/templates/responses/health/: health.j2
api/cca/templates/responses/v1/: balance.j2  transaction.j2
api/tests/: test_health.py
blockchain/: package-lock.json  package.json
blockchain/contracts/: CulinaryCoin.sol
blockchain/migrations/: 2_deploy_contracts.js
website/: apply.html  contact.html  index.html  redeem.html
website/bootstrap-4.3.1-dist/css/: bootstrap.css
website/css/: test.css
website/html/: test.html
