[metadata]
name = Culinary Coin
author = Charles Steele
summary = Culinary Coin
home-page = https://github.com/culinary-coin
requires-python = >=3.7.3

[files]
packages =
    culinary-coin

[extras]
dev =
    pylint>=1.7.2
tox =
    tox>=3.0.0
pbr =
    pbr>=4.0.2
test =
    pytest-cov==2.5.1
    pytest==4.3.1
    pytest-watch==4.1.0
    pytest-env==0.6.2
    responses==0.10.6
    pytest-asyncio==0.10.0
    responses==0.10.6
    mock==2.0.0
    aiohttp==3.5.4
    asynctest==0.12.3
